compiler/test-data/parser/layout/errors/invalid_modifier.frel
module test.layout.errors.invalid_modifier

// ERROR: Invalid alignment modifier
blueprint InvalidModifier {
    """layout
    | @cell |
    """
}
